# jogi-agent

./: .env.example  .gitignore  README.md  bin.py  pyproject.toml  report.md  requirements.txt
chroma_db/82f28efd-f584-4c89-a14a-94d771f35bf4/: index_metadata.pickle
chroma_db/aa416112-0695-43d8-a275-073cebb980e2/: index_metadata.pickle
knowledge/: user_preference.txt
src/: main.py  rag.py  test.py
src/jogi_agent/: README.md  crew.py  main.py  pyproject.toml  report.md
src/jogi_agent/config/: agents.yaml  tasks.yaml
src/jogi_agent/tools/: custom_tool.py
